<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >
    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		profile_screen
     *	@date 		Tuesday 10th of October 2023 11:55:50 AM
     *	@title 		Design
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->
    <ScrollView android:id="@+id/profile_screen"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <View
                android:id="@+id/_bg__profile_screen"
                android:layout_width="375dp"
                android:layout_height="812dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/_bg__profile_screen_shape" />

            <RelativeLayout android:id="@+id/frame_16"
                android:layout_marginTop="460dp"
                android:layout_marginStart="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__frame_16_ek1"

                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="322dp"
                    android:layout_height="144dp" />


                <RelativeLayout android:id="@+id/group_11"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__group_11_ek1"

                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="65dp"
                        android:layout_height="18dp" />

                    <TextView android:id="@+id/full_name"
                        android:textSize="14sp"
                        android:textColor="@color/full_name_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="78.4dp"
                        android:layout_height="22.4dp"
                        android:text="@string/full_name_string"
                        />

                </RelativeLayout>

                <ImageView android:id="@+id/line_1"
                    android:src="@drawable/line_1"
                    android:contentDescription="line_1"
                    android:layout_marginStart="-0.5dp"
                    android:layout_marginTop="32.5dp"
                    android:layout_width="322dp"
                    android:layout_height="0.5dp" />


                <RelativeLayout android:id="@+id/group_12"
                    android:layout_marginTop="48dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__group_12_ek1"
                        android:background="@drawable/_bg__group_12_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="-48dp"
                        android:layout_width="36dp"
                        android:layout_height="18dp" />

                    <TextView android:id="@+id/email"
                        android:textSize="14sp"
                        android:textColor="@color/full_name_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="49.4dp"
                        android:layout_height="22.4dp"
                        android:text="@string/email_string"
                        />

                </RelativeLayout>

                <ImageView android:id="@+id/line_2"
                    android:src="@drawable/line_2"
                    android:contentDescription="line_2"
                    android:layout_marginStart="-0.5dp"
                    android:layout_marginTop="80.5dp"
                    android:layout_width="322dp"
                    android:layout_height="0.5dp" />

                <ImageView android:id="@+id/line_4"
                    android:src="@drawable/line_4"
                    android:contentDescription="line_4"
                    android:layout_marginStart="-0.5dp"
                    android:layout_marginTop="95.5dp"
                    android:layout_width="322dp"
                    android:layout_height="0.5dp" />


                <RelativeLayout android:id="@+id/group_16"
                    android:layout_marginTop="111dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView   android:id="@+id/_bg__group_16_ek1"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="-111dp"
                        android:layout_width="69dp"
                        android:layout_height="18dp" />

                    <TextView android:id="@+id/social_url"
                        android:textSize="14sp"
                        android:textColor="@color/full_name_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="82.4dp"
                        android:layout_height="22.4dp"
                        android:text="@string/social_url_string"
                        />

                </RelativeLayout>

                <ImageView android:id="@+id/line_3"
                    android:src="@drawable/line_3"
                    android:contentDescription="line_3"
                    android:layout_marginStart="-0.5dp"
                    android:layout_marginTop="143.5dp"
                    android:layout_width="322dp"
                    android:layout_height="0.5dp" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/menu"
                android:layout_marginTop="741dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__menu_ek1"
                    android:background="@drawable/_bg__menu_ek1_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="375dp"
                    android:layout_height="73dp" />

                <View   android:id="@+id/rectangle"
                    android:background="@drawable/rectangle_shape"
                    android:layout_marginStart="-0.2dp"
                    android:layout_marginTop="-0.2dp"
                    android:layout_width="375dp"
                    android:layout_height="73dp" />


                <RelativeLayout android:id="@+id/home_indicator"
                    android:layout_marginTop="39dp"
                    android:layout_marginStart="121.5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__home_indicator_ek1"
                        android:background="@drawable/_bg__home_indicator_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="134dp"
                        android:layout_height="34dp" />

                    <View   android:id="@+id/home_indicator_ek2"
                        android:background="@drawable/home_indicator_ek2_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="21dp"
                        android:layout_width="134dp"
                        android:layout_height="5dp" />

                </RelativeLayout>

                <View   android:id="@+id/ellipse_1"
                    android:background="@drawable/ellipse_1_shape"
                    android:layout_marginStart="304dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="42dp"
                    android:layout_height="42dp" />


                <RelativeLayout android:id="@+id/profile"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="311dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__profile_ek1"
                        android:background="@drawable/_bg__profile_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="26dp"
                        android:layout_height="26dp" />

                    <ImageView android:id="@+id/shape"
                        android:src="@drawable/shape"
                        android:contentDescription="shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="35dp"
                        android:layout_width="26dp"
                        android:layout_height="26dp" />

                    <ImageView android:id="@+id/shape_ek1"
                        android:src="@drawable/shape_ek1"
                        android:contentDescription="shape_ek1"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="26dp"
                        android:layout_height="26dp" />

                </RelativeLayout>


                <RelativeLayout android:id="@+id/mess"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="176dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__mess_ek1"
                        android:background="@drawable/_bg__mess_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="29dp"
                        android:layout_height="31dp" />

                    <ImageView android:id="@+id/shape_ek2"
                        android:src="@drawable/shape_ek2"
                        android:contentDescription="shape_ek2"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="24dp"
                        android:layout_height="26dp" />

                    <View   android:id="@+id/oval"
                        android:background="@drawable/oval_shape"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="13dp"
                        android:layout_height="13dp" />

                </RelativeLayout>

                <ImageView android:id="@+id/ellipse_19"
                    android:src="@drawable/ellipse_19"
                    android:contentDescription="ellipse_19"
                    android:layout_marginStart="40.9dp"
                    android:layout_marginTop="7.9dp"
                    android:layout_width="28dp"
                    android:layout_height="31dp" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/status_bar"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__status_bar_ek1"
                    android:background="@drawable/_bg__status_bar_ek1_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="375dp"
                    android:layout_height="44dp" />


                <RelativeLayout android:id="@+id/battery"
                    android:layout_marginTop="17.33dp"
                    android:layout_marginStart="336.33dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__battery_ek1"
                        android:background="@drawable/_bg__battery_ek1_shape"
                        android:layout_marginStart="-336dp"
                        android:layout_marginTop="-17dp"
                        android:layout_width="24.33dp"
                        android:layout_height="11.33dp" />

                    <View   android:id="@+id/border"
                        android:background="@drawable/border_shape"
                        android:alpha="0.35"
                        android:layout_marginStart="-1dp"
                        android:layout_marginTop="-1dp"
                        android:layout_width="22dp"
                        android:layout_height="11.33dp" />

                    <ImageView android:id="@+id/cap"
                        android:src="@drawable/cap"
                        android:contentDescription="cap"
                        android:alpha="0.40000000596046"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="4dp"
                        android:layout_width="1.33dp"
                        android:layout_height="4dp" />

                    <View   android:id="@+id/capacity"
                        android:background="@drawable/capacity_shape"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_width="18dp"
                        android:layout_height="7.33dp" />

                </RelativeLayout>

                <ImageView android:id="@+id/wifi"
                    android:src="@drawable/wifi"
                    android:contentDescription="wifi"
                    android:layout_marginStart="316dp"
                    android:layout_marginTop="17.33dp"
                    android:layout_width="15.33dp"
                    android:layout_height="11dp" />

                <ImageView android:id="@+id/cellular_connection"
                    android:src="@drawable/cellular_connection"
                    android:contentDescription="cellular_connection"
                    android:layout_marginStart="294dp"
                    android:layout_marginTop="17.67dp"
                    android:layout_width="17dp"
                    android:layout_height="10.67dp" />


                <RelativeLayout android:id="@+id/time_style"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="21dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__time_style_ek1"
                        android:background="@drawable/_bg__time_style_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="54dp"
                        android:layout_height="21dp" />

                    <TextView android:id="@+id/time"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="@color/_bg__frame_16_ek1_color"
                        android:layout_marginLeft="-3dp"
                        android:layout_marginTop="7dp"
                        android:layout_width="61dp"
                        android:layout_height="24.5dp"
                        android:text="@string/time_string"
                        />

                </RelativeLayout>

            </RelativeLayout>

            <TextView android:id="@+id/discover"
                android:textStyle="bold"
                android:textSize="36sp"
                android:textColor="@color/discover_color"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="47dp"
                android:layout_width="140.6dp"
                android:layout_height="59.6dp"
                android:text="@string/discover_string"
                />

            <TextView android:id="@+id/about_"
                android:textSize="21sp"
                android:textColor="@color/about__color"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="411dp"
                android:layout_width="77.1dp"
                android:layout_height="32.1dp"
                android:text="@string/about__string"
                />

            <View   android:id="@+id/rectangle_3"
                android:background="@drawable/rectangle_3_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="389dp"
                android:layout_width="375dp"
                android:layout_height="8dp" />

        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>
